--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,16 @@
   ></app-winery>
   <hr>
   <div class="col-xs-12">
+    <button class="btn btn-primary" (click)="onChangeFirst()">Change first Element</button>
+    <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy first Component</button>
     <app-server-element
       *ngFor="let serverElement of serverElements"
-    [srvElement]="serverElement"></app-server-element>
+    [srvElement]="serverElement"
+    [name]="serverElement.name" >
+      <p>
+        <strong *ngIf="serverElement.type === 'server'" style="color: #8b0000">{{ serverElement.content}}</strong>
+        <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+      </p>
+    </app-server-element>
   </div>
 </div>
