--- a/src/app/recipes/recipe-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipes-detail.component.html
@@ -19,7 +19,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Add To Shopping List</a></li>
+        <li><a (click)="onAddTOShoppingList()" style="cursor: pointer;">Add To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -31,7 +31,13 @@
     {{ recipe.description}}
   </div>
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+    <li
+      class="list-group-item"
+    *ngFor="let ingredient of recipe.ingredients">
+      {{ingredient.name}} - {{ingredient.amount}}
+    </li>
+    </ul>
   </div>
 </div>
 
