Added Forms and deleting items in FormArray

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,8 @@
      <a
        class="list-group-item"
        style="cursor: pointer"
-       *ngFor="let ingredent of ingredients"
+       *ngFor="let ingredent of ingredients; let i = index"
+       (click)="onEditItem(i)"
      >
        {{ingredent.name}} ({{ingredent.amount}})
      </a>
